syntax = "proto3";

package user;

option go_package = "thinkflow-service/proto/user";

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse) {}
  rpc FindUser(FindUserRequest) returns (UserResponse) {}
}

message GetUserRequest {
  int32 id = 1;
}

message FindUserRequest {
  string condition = 1;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string avatar = 4;
  string status = 5;
  int64 created_at = 6;
  int64 updated_at = 7;
} 